--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		var pagetable = {
     "opmlUrl": "",
     "opmlTitle": "KR Blog",
-    "opmlDateModified": "Mon, 25 Aug 2014 21:05:18 GMT",
+    "opmlDateModified": "Mon, 25 Aug 2014 21:09:53 GMT",
     "opmlExpansionState": "1,2,3,5,6,8,13,14,15",
     "opmlLink": "http://kevinraymond.smallpict.com/",
     "opmlFlCmsRender": "true",
@@ -34,17 +34,17 @@
     "opmlTypeInsertedNode": "",
     "opmlWordpressBlogUrl": "",
     "opmlDescription": "",
-    "opmlLastCursor": "18",
+    "opmlLastCursor": "19",
     "opmlDateCreated": "",
     "opmlOwnerEmail": "",
     "opmlOwnerId": "",
     "opmlOwnerProfile": "",
     "menuname": "default",
     "googleAnalyticsID": "",
-    "domain": "",
+    "domain": "knockingtinblog.com",
     "bootstrapTheme": "readable",
     "type": "bloghome",
-    "slogan": "Don't slam the door on the way out.",
+    "slogan": "Shut up and eat your vegetables.",
     "disqusGroupName": "smallpict",
     "siteTimeZone": "-5",
     "dateFormat": "%A, %B %e, %Y at %l:%M %p",
@@ -70,7 +70,7 @@
     "flMarkdown": true,
     "leftIndent": 0,
     "text": "Kevin Raymond's Blog",
-    "created": "Mon, 25 Aug 2014 21:05:18 GMT",
+    "created": "Mon, 25 Aug 2014 21:09:53 GMT",
     "description": "",
     "path": "",
     "subheadColor": "white",
@@ -88,7 +88,7 @@
     "flEmojify": "true",
     "cssUrl": "http://static.smallpicture.com/bootswatch/readable/bootstrap.min.css",
     "menuTitle": "Kevin Raymond's Blog",
-    "now": "Mon Aug 25 2014 17:05:18 GMT-0400 (EDT)",
+    "now": "Mon Aug 25 2014 17:09:53 GMT-0400 (EDT)",
     "copyright": "&copy; 2014 Kevin Raymond.",
     "url": "http://kevinraymond.smallpict.com/.html"
 }; //12/12/13 by DW
@@ -398,9 +398,9 @@
 
 				<div class="divFooterText">
 					<hr>
-					<p style="float: right;">Last built: Mon, Aug 25, 2014 at  4:05 PM</p>
-					<script>var disqus_identifier = "Mon, 25 Aug 2014 21:05:18 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
-					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Monday, August 25, 2014 at  4:05 PM</span>.</div>
+					<p style="float: right;">Last built: Mon, Aug 25, 2014 at  4:09 PM</p>
+					<script>var disqus_identifier = "Mon, 25 Aug 2014 21:09:53 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
+					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Monday, August 25, 2014 at  4:09 PM</span>.</div>
 					</div>
 				</div>
 			</div>
