--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		var pagetable = {
     "opmlUrl": "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opml?dl=0",
     "opmlTitle": "KR Blog",
-    "opmlDateModified": "Tue, 26 Aug 2014 12:41:01 GMT",
-    "opmlExpansionState": "1,2,3,5,7,8,10,15,16,17",
+    "opmlDateModified": "Tue, 26 Aug 2014 18:13:41 GMT",
+    "opmlExpansionState": "1,2,3,6,8,9,11,16,17,18",
     "opmlLink": "http://kevinraymond.smallpict.com",
     "opmlFlCmsRender": "true",
     "opmlFlCmsRenderInBackground": "true",
@@ -44,7 +44,7 @@
     "domain": "knockingtinblog.com",
     "bootstrapTheme": "readable",
     "type": "bloghome",
-    "slogan": "We don't need no stinkin rock stars.",
+    "slogan": "Ask not what the Internet can do for you.",
     "disqusGroupName": "smallpict",
     "siteTimeZone": "-5",
     "dateFormat": "%A, %B %e, %Y at %l:%M %p",
@@ -70,7 +70,7 @@
     "flMarkdown": true,
     "leftIndent": 0,
     "text": "Kevin Raymond's Blog",
-    "created": "Tue, 26 Aug 2014 12:41:01 GMT",
+    "created": "Tue, 26 Aug 2014 18:13:41 GMT",
     "description": "",
     "path": "",
     "subheadColor": "white",
@@ -88,7 +88,7 @@
     "flEmojify": "true",
     "cssUrl": "http://static.smallpicture.com/bootswatch/readable/bootstrap.min.css",
     "menuTitle": "Kevin Raymond's Blog",
-    "now": "Tue Aug 26 2014 08:41:01 GMT-0400 (EDT)",
+    "now": "Tue Aug 26 2014 14:13:41 GMT-0400 (EDT)",
     "copyright": "&copy; 2014 Kevin Raymond.",
     "url": "http://kevinraymond.smallpict.com/.html"
 }; //12/12/13 by DW
@@ -169,6 +169,22 @@
 					<h2 id="idBlogHomePageTitle">Kevin Raymond's Blog</h2>
 					</div>
 				<div class="divFargoBlogHome">
+	<div class="divBlogHomeItem">
+		<div class="divBlogHomeItemTitle"><a href="2014/08/26/delegatingIsHard.html">Delegating is Hard</a></div>
+		<p>This will be the second year I've had help in the fabrication shop from time to time. The extra hands have been nothing but a god send for helping to move the company forward (duh). Every new step we take as a business means a change from how I've done things for 10+ years in the shop. Wanting to grow means change and if I want to continue, then I will have to accept the facts.</p>
+
+<p>Truth, change is not my best trait. None of us really like to change, staying in our comfort zone is well, comfortable. We all hate the change until that move in a new direction brings positive results or ease to how we did things previous. I know this has happened to me multiple times.</p>
+
+<p>My biggest hurdle and most positive change recently has been the ability to delegate tasks to whomever is helping in the shop. Something I never would have thought about years ago. Mainly because staying with the business and making it successful was something I could have cared less about.</p>
+
+<p>Man, it's hard though, this delegation thing.</p>
+
+<p>The fabrication process here has always been in my head. I figured out how to make something and then I fabricated it. The process was all mine, nothing had to be documented because I was the one doing all the work. </p>
+
+<p>Now, not only do I have to teach what I know, I have to figure the process for each piece and delegate those to the helper on the floor. Completely foreign to me as a fabricator and something I desperately need as a quality boss.</p>
+
+<p>Giving up control of the finished product has also been something I've had trouble with. Making sure what leaves the shop is up to the standards I set for myself and expect from whoever works here. All of these things are skills I need to master if I'm going to run a quality company with employees who want to be here and do good work.</p>
+		</div>
 	<div class="divBlogHomeItem">
 		<div class="divBlogHomeItemTitle"><a href="2014/08/26/iAmNotANaturalBlogger.html">I Am Not a Natural Blogger</a></div>
 		<p>One skill I lack is getting my thoughts out in a well maintained form other than that of crazy, messy notes strewn about my desk like a post tornado in July. I have never been good at being real with my thoughts. I suspect many of us suffer the same demon. Although, I have kept a journal for years and loved blogging since I started a few years ago. Problem is, being honest with myself does not come natural. My thoughts are very short, to the point and sometimes when I want to get more in depth I lose the flow of the content and repeat myself. Everything turns into a giant, boring circle of words with dry, boring topics. The process can be painful.</p>
@@ -410,9 +426,9 @@
 
 				<div class="divFooterText">
 					<hr>
-					<p style="float: right;">Last built: Tue, Aug 26, 2014 at  7:41 AM</p>
-					<script>var disqus_identifier = "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opml?dl=0Tue, 26 Aug 2014 12:41:01 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
-					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Tuesday, August 26, 2014 at  7:41 AM</span>.</div>
+					<p style="float: right;">Last built: Tue, Aug 26, 2014 at  1:13 PM</p>
+					<script>var disqus_identifier = "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opml?dl=0Tue, 26 Aug 2014 18:13:41 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
+					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Tuesday, August 26, 2014 at  1:13 PM</span>.</div>
 					</div>
 				</div>
 			</div>
